fix(styles): contrast

--- a/packages/frontend/app/styles/app.css
+++ b/packages/frontend/app/styles/app.css
@@ -598,10 +598,6 @@ video {
   margin-top: 0.25rem;
 }
 
-.-ml-4 {
-  margin-left: -1rem;
-}
-
 .-ml-8 {
   margin-left: -2rem;
 }
